# policyengine-api-v2

./: .Makefile.swp  .gcloudignore  .gitignore  Dockerfile  Makefile  Makefile.deploy  README.md  app.py  cloudbuild.yaml  common.mk  main.py  pyproject.toml  requirements.txt  server_common.deploy.mk  server_common.local.mk  server_common.mk  workflow.yaml
api/: app.py  (+1 more)
libs/policyengine-api/: Makefile  README.md  pyproject.toml
libs/policyengine-api/src/policyengine/api/: __init__.py
libs/policyengine-api/src/policyengine/api/household/: __init__.py  household.py  user.py
libs/policyengine-api/src/policyengine/api/simulation/: models.py  router.py
libs/policyengine-api/src/policyengine_api/: __init__.py
libs/policyengine-api/src/policyengine_api/api/: __init__.py  country.py
libs/policyengine-api/src/policyengine_api/api/data/regions/: ca_regions.json  il_regions.json  ng_regions.json  uk_regions.json  us_regions.json
libs/policyengine-api/src/policyengine_api/api/data/time_periods/: default_time_periods.json  uk_time_periods.json  us_time_periods.json
libs/policyengine-api/src/policyengine_api/api/enums/: __init__.py  country_id.py  entities.py  entity_groups.py  periods.py  value_types.py
libs/policyengine-api/src/policyengine_api/api/household/: __init__.py  household.py  user.py
libs/policyengine-api/src/policyengine_api/api/models/: computation_tree.py  country_id.py  household.py  periods.py
libs/policyengine-api/src/policyengine_api/api/routers/: calculate.py  liveness_check.py  metadata.py  readiness_check.py
libs/policyengine-api/src/policyengine_api/api/simulation/: __init__.py  simulation.py
libs/policyengine-api/src/policyengine_api/api/utils/: __init__.py  computation_tree.py  constants.py  enums.py  google_cloud.py  json.py  metadata.py
libs/policyengine-api/src/policyengine_api/household/: __init__.py  household.py  user.py
libs/policyengine-api/src/policyengine_api/simulation/: __init__.py  models.py  router.py
libs/policyengine-api/test/api/household/: test_household.py
libs/policyengine-api/test/common/: fixtures.py
libs/policyengine-api/tests/api/household/: test_household.py  test_user.py
libs/policyengine-api/tests/api/simulation/: test_simulation.py
libs/policyengine-api/tests/common/: fixtures.py
libs/policyengine-fastapi/: Makefile  README.md  pyproject.toml
libs/policyengine-fastapi/src/policyengine/fastapi/auth/: __init__.py  jwt_decoder.py
libs/policyengine-fastapi/src/policyengine/fastapi/opentelemetry/: __init__.py  gcp.py  middleware.py
libs/policyengine-fastapi/src/policyengine_api/fastapi/: __init__.py  database.py  exit.py  generator.py
libs/policyengine-fastapi/src/policyengine_api/fastapi/health/: __init__.py
libs/policyengine-fastapi/src/policyengine_api/fastapi/opentelemetry/: __init__.py  console.py  gcp.py  instrumentor.py  middleware.py
libs/policyengine-fastapi/src/policyengine_api/fastapi/ping/: __init__.py
libs/policyengine-fastapi/src/policyengine_fastapi/: __init__.py
libs/policyengine-fastapi/src/policyengine_fastapi/auth/: __init__.py  jwt_decoder.py
libs/policyengine-fastapi/src/policyengine_fastapi/opentelemetry/: __init__.py
libs/policyengine-fastapi/tests/: test_exit.py
libs/policyengine-fastapi/tests/ping/: conftest.py  test_alive.py  test_ping.py  test_started.py
libs/policyengine-simulation-api/: Makefile  pyproject.toml
libs/policyengine-simulation-api/src/policyengine_api/simulation_api/: __init__.py  simulation.py
policyengine_api_v2/task_api/: Makefile  pyproject.toml
policyengine_api_v2/task_api/task_api/api/: requirements.txt
policyengine_api_v2/task_api/task_api/core/: database.py
policyengine_api_v2/task_api/task_api/core/functions/main/: main.py
policyengine_api_v2/task_api/task_api/core/jobs/main/: main.py
projects/policyengine-api-full/: .gcloudignore  Dockerfile  Makefile  Makefile.deploy  generate_clients.pom.xml  logs  makefile.env  out  pyproject.toml
projects/policyengine-api-full/src/policyengine_api_full/: main.py  settings.py
projects/policyengine-api-main/: README.md  pyproject.toml
projects/policyengine-api-main/src/policyengine_api_full/: main.py
projects/policyengine-api-simulation/: .dockerignore  Dockerfile  Makefile  Makefile.deploy  README.md  dump_package_version.sh  generate_clients.pom.xml  makefile.env  pyproject.toml  workflow.yaml
projects/policyengine-api-simulation/scripts/: dump_package_version.py
projects/policyengine-api-simulation/src/policyengine_api_simulation/: generate_openapi.py  main.py  settings.py
projects/policyengine-api-simulation/src/policyengine_simulation_api/: main.py
projects/policyengine-api-tagger/: Dockerfile  Makefile  Makefile.deploy  makefile.env  pyproject.toml
projects/policyengine-api-tagger/src/policyengine_api_tagger/: main.py
projects/policyengine-api-tagger/src/policyengine_api_tagger/api/: cloudrun_client.py  main.py  revision_tagger.py  routes.py  settings.py
projects/policyengine-api-tagger/tests/api/: common.py  conftest.py  integration_test.py  test_cloudrun_client.py  test_revision_tagger.py
projects/policyengine-apis-integ/: Makefile  pyproject.toml
projects/policyengine-apis-integ/tests/full/: conftest.py  test_ping.py
projects/policyengine-apis-integ/tests/simulation/: conftest.py  test_calculate.py  test_calculate_cliffs.py  test_ping.py
projects/policyengine-apis-integ/tests/simulation_workflow/: conftest.py  simplified_workflow_client.py  test_calculate.py
projects/policyengine-household-api/: Makefile  makefile.env  pyproject.toml
projects/policyengine-household-api/policyengine_household_api/: asgi.py  main.py
projects/policyengine-household-api/policyengine_household_api/src/: main.py
projects/policyengine-household-api/src/policyengine_household_api/: main.py
projects/policyengine-simulation-api/: Dockerfile  Makefile  Makefile.deploy  pyproject.toml
projects/policyengine-simulation-api/src/policyengine_api_full/: main.py
projects/policyengine-simulation-api/src/policyengine_simulation_api/: main.py  settings.py
(+80 files in other folders)
