[project]
name = "policyengine-api-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikhil Woodruff",email = "nikhil@policyengine.org"},
    {name = "Anthony Volk",email = "anthony@policyengine.org"},
    {name = "Michael Smit",email = "michael@policyengine.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "policyengine-api @ libs/policyengine-api",
    "policyengine-fastapi @ libs/policyengine-fastapi",
    "policyengine-api-main @ projects/policyengine-api-main",
    "policyengine-api-simulation @ projects/policyengine-api-simulation"
]

[tool.poetry]
package-mode = false
