[project]
name = "policyengine-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "opentelemetry-sdk (>=1.30.0,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "python-json-logger (>=3.2.1,<4.0.0)",
    "opentelemetry-instrumentation-logging (>=0.51b0,<0.52)",
    "opentelemetry-exporter-gcp-trace (>=1.9.0,<2.0.0)",
    "opentelemetry-exporter-gcp-monitoring (>=1.9.0a0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "policyengine_api", from = "src" },
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
