[project]
name = "policyengine-fastapi"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] >=0.115.8,<0.116.0",
    "pyjwt >=2.10.1,<3.0.0",
    "opentelemetry-sdk >=1.30.0,<2.0.0",
    "sqlmodel >=0.0.22,<0.0.23",
    "python-json-logger >=3.2.1,<4.0.0",
    "opentelemetry-instrumentation-logging >=0.51b0,<0.52",
    "opentelemetry-exporter-gcp-trace >=1.9.0,<2.0.0",
    "opentelemetry-exporter-gcp-monitoring >=1.9.0a0,<2.0.0",
    "opentelemetry-instrumentation-fastapi >=0.51b0,<0.52",
]

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/policyengine_api/fastapi"]
packages = ["src/policyengine_api"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--cov=policyengine_api.fastapi --cov-report=term-missing --cov-fail-under=30"
