[project]
name = "policyengine-simulation-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "policyengine-fastapi @ ../policyengine-fastapi",
    "policyengine==0.1.2",
    "policyengine-uk==2.22.6",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  {include = "policyengine_api", from = "src" },
]

[tool.poetry.dependencies]
policyengine-fastapi = {develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
