[project]
name = "policyengine-simulation-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "policyengine-fastapi",
    "policyengine>=0.1.3",
    "policyengine-uk>=2.22.8",
    "policyengine-us>=1.250.0",
]

[tool.uv.sources]
policyengine-fastapi = { path = "../policyengine-fastapi", editable = true }

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/policyengine_api/simulation_api"]
packages = ["src/policyengine_api"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
