[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "policyengine_task_api"
version = "0.1.0"
description = "API utilities."
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "policyengine",
    "pydantic",
    "fastapi[standard]",
    "sqlmodel"
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "furo",
    "autodoc_pydantic",
    "jupyter-book",
    "yaml-changelog>=0.1.7",
    "itables",
    "build",
]

[tool.setuptools]
packages = ["policyengine_task_api"]
include-package-data = true

[tool.setuptools.package-data]
"policyengine" = ["**/*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''