[project]
name = "policyengine-api-main"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
]
