[project]
name = "policyengine-simulation-api-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "policyengine-simulation-api",
]

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[tool.uv.sources]
policyengine-simulation-api = { path = "../../libs/policyengine-simulation-api", editable = true }

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

testpaths = ["tests"]
