[project]
name = "policyengine-api-tagger"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-run (>=0.10.18,<0.11.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "policyengine-fastapi",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
addopts = "--cov=policyengine_api_tagger --cov-report=term-missing --cov-fail-under=60"

[tool.uv.sources]
policyengine-fastapi = { path = "../../libs/policyengine-fastapi", editable = true }
