[project]
name = "policyengine-api-tagger"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "policyengine-fastapi @ ../../libs/policyengine-fastapi",
    "google-cloud-run (>=0.10.18,<0.11.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  {include = "policyengine_api_tagger", from = "src" },
]

[tool.poetry.dependencies]
policyengine-fastapi = {develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]
