[project]
name = "policyengine-api-full-integ"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "policyengine_full_api_client",
    "policyengine_simulation_api_client",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "google-cloud-workflows>=1.18.1",
]

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-xdist>=3.7.0"]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = ["tests"]

[tool.uv.sources]
policyengine_full_api_client = { path = "../policyengine-api-full/artifacts/clients/python" }
policyengine_simulation_api_client = { path = "../policyengine-api-simulation/artifacts/clients/python" }

[tool.pyright]
#The generated clients do not do the "public export" convention
reportPrivateImportUsage = "none"
