[project]
name = "policyengine_household_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "fastapi (>=0.115.8, <0.116.0)",
    "policyengine-api @ ../../libs/policyengine-api",
    "policyengine-uk (>=2.19.1)",
    "policyengine-us (>=1.202.2)",
    "policyengine-canada (>=0.96.2)",
    "policyengine-il (>=0.1.0)",
    "policyengine-ng (>=0.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [
    {include = "policyengine_household_api"}
]

[tool.poetry.dependencies]
policyengine-api = {develop = true}
