[project]
name = "policyengine_household_api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "fastapi (>=0.115.8, <0.116.0)",
    "policyengine-api",
    "policyengine-uk (>=2.19.1)",
    "policyengine-us (>=1.202.2)",
    "policyengine-il (>=0.1.0)",
    "policyengine-ng (>=0.5.1)",
    "numpy (>=1.26.4,<1.27.0)"
]

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0",]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = ["tests"]

[tool.uv.sources]
policyengine-api = { path = "../../libs/policyengine-api", editable = true }
