[project]
name = "policyengine-simulation-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikhil Woodruff",email = "nikhil@policyengine.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "policyengine",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
